deploy/test-latest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-latest
spec:
  securityContext:
    runAsNonRoot: true
  containers:
    - name: nginx
      image: nginx:latest
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
