deploy/test-root.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-root
spec:
  containers:
    - name: nginx
      image: nginx:latest
