deploy/kyverno-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: workload-security
spec:
  validationFailureAction: Enforce
  background: true

  rules:

    - name: require-run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Pods must run as non-root."
        pattern:
          spec:
            securityContext:
              runAsNonRoot: true

    - name: disallow-latest-tag
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Images tagged ':latest' are not allowed."
        pattern:
          spec:
            containers:
              - image: "!*:latest"

    # Task 2:
    # verifyImages rule will be added after Cosign signing
